<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/message_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_user" />
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nachricht" />

    <TextView
        android:id="@+id/message_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_time"
         />

    <TextView
        android:id="@+id/severity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_severity"
         />

    <TextView
        android:id="@+id/message_read_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_read_time"
         />

</LinearLayout>
