<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/email"
        android:layout_below="@id/name"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/email" />
    <Button
        android:id="@+id/logout"
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/fetchResult"
        android:layout_below="@id/logout"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <Button
        android:id="@+id/fetchProfile"
        android:text="@string/show_the_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logout"/>


</LinearLayout>